crates/hird-check/tests/snapshots/tools__handle_non_function_tool_handler_rejected.snap
---
source: crates/hird-check/tests/tools.rs
expression: "check_str(\"type Path = Path(String)\\n\\\n         type RepoState = RepoState(String)\\n\\\n         tool ReadRepo : { path: Path } -> RepoState\\n\\\n         fn bad(p: Path) -> RepoState = handle { Tool<ReadRepo> -> 42 } in read_repo({ path: p })\")"
---
Path : String → Path
RepoState : String → RepoState
bad : Path → RepoState
read_repo : { path: Path } → RepoState ! {Tool<ReadRepo>}
record ReadRepoInvocation : { args: { path: Path }, caller: CallerId, result: RepoState, timestamp: Timestamp, tool: String }
error[C0031] 162..164: a handle arm's handler must be a function, but this has type `Int`
