crates/hird-check/tests/snapshots/tools__open_row_in_tool_decl_is_rejected.snap
---
source: crates/hird-check/tests/tools.rs
expression: "check_str(\"effect Tool<t>\\n\\\n         tool Leaky : { x: Int } -> Int ! {r}\")"
---
error[C0012] 49..50: row variable `r` is not declared here
