crates/hird-check/tests/snapshots/tools__tool_capability_arg_is_rejected.snap
---
source: crates/hird-check/tests/tools.rs
expression: "check_str(\"pub opaque type Sink = Sink(String)\\n\\\n         tool Emit : { sink: Sink, line: String } -> ()\")"
---
Sink : String → Sink
error[C0032] 41..45: tool `Emit` args are not wire-representable: `Sink` is an opaque capability
